--- a/IKRPG/AndroidManifest.xml
+++ b/IKRPG/AndroidManifest.xml
@@ -13,13 +13,17 @@
         android:label="@string/app_name" >
         <activity
             android:label="@string/app_name"
-            android:name=".MainActivity" >
+            android:name=".activities.MainActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+		
+		<activity
+			android:name=".activities.NewCharacterActivity" />
+		
     </application>
 
 </manifest>
