--- a/IKRPG/AndroidManifest.xml
+++ b/IKRPG/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk 
-        android:minSdkVersion="8" 
+        android:minSdkVersion="8"
         android:targetSdkVersion="11" />
 
     <application
@@ -13,7 +13,7 @@
         android:label="@string/app_name" >
         <activity
             android:label="@string/app_name"
-            android:name=".activities.MainActivity" >
+            android:name="MainActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,7 +22,8 @@
         </activity>
 		
 		<activity
-			android:name=".activities.NewCharacterActivity" />
+			android:name=".character.NewCharacterServiceActivity"
+			android:configChanges="orientation|keyboardHidden" />
 		
     </application>
 
