Framework for Exp gain

--- a/IKRPG/AndroidManifest.xml
+++ b/IKRPG/AndroidManifest.xml
@@ -28,8 +28,10 @@
         </activity>
 		
 		<activity android:name=".CharacterHomeActivity" />
+		<activity android:name=".CharacterAdvancementPointGain"/>
+		<activity android:name=".character.CharacterAdvancementServiceActivity"/>
 		<activity android:name=".character.CharacterCreationServiceActivity"/>
-		
+			
     </application>
 
 </manifest>
